<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/leaneraddconn"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackgoundBlack"
    android:orientation="vertical">
    <include layout="@layout/toolbar" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/txtDisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBackgoundBlack"
            android:text="@string/DisplayName"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:ems="10"
            android:hint="frontend"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/txtIpOrHostname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBackgoundBlack"
            android:text="@string/ip_or_hostname"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txtPort"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBackgoundBlack"
            android:text="@string/port"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">


        <EditText
            android:id="@+id/edAddress"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="192.168.0.1"
            android:inputType="text" />

        <EditText
            android:id="@+id/edPort"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:inputType="text"
            android:text="@string/_8080" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text=":"
            android:textColor="@color/Black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Switch
            android:id="@+id/auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/authentification" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">


        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBackgoundBlack"
            android:text="@string/user"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">


        <TextView
            android:id="@+id/txtPasswd"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBackgoundBlack"
            android:text="@string/password"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edPasswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPassword"
            android:text="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">


        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/back_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goBack"
            android:text="@string/back" />

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/saveServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addNewServer"
            android:text="@string/saveSrv" />
    </LinearLayout>

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/clean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/clean" />
</LinearLayout>